loading mesh from a text file